--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7Zw8TeUmUcYctMVch4ePI",
+      "authorship_tag": "ABX9TyNGWn1pJ2urt+jLXGg3f5LO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,65 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Importing libraries\n",
+        "\n",
+        "First, we import all libraries we need in one cell."
+      ],
+      "metadata": {
+        "id": "Vrs49lWSemgl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install lasio"
+      ],
+      "metadata": {
+        "id": "EQmBg4WRe9YN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive # for reading\n",
+        "import os # for reading\n",
+        "import lasio # for reading\n",
+        "import pandas as pd # for preprocessing\n",
+        "import seaborn as sns # for graphing\n",
+        "import matplotlib.pyplot as plt # for graphing\n",
+        "from sklearn.preprocessing import StandardScaler,MinMaxScaler,RobustScaler,MaxAbsScaler # for scaling\n",
+        "from sklearn.impute import KNNImputer # for missing values\n",
+        "from sklearn.model_selection import train_test_split # for model selection\n",
+        "from sklearn.linear_model import LinearRegression # for training\n",
+        "from sklearn.tree import DecisionTreeRegressor # for training\n",
+        "import xgboost as xgb # for training\n",
+        "from sklearn.model_selection import RandomizedSearchCV # for hyperparamters\n",
+        "import numpy as np # for preprocessing\n",
+        "from sklearn.decomposition import PCA # for dimension reduction\n",
+        "import torch # for deep learning\n",
+        "import torch.nn as nn # for deep learning\n",
+        "import torch.optim as optim # for deep learning"
+      ],
+      "metadata": {
+        "id": "DUD6S1cOe3be"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reading Data"
+      ],
+      "metadata": {
+        "id": "ujMtLnIoe0TA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "This section is related to reading and mounting data from Google Drive."
       ],
       "metadata": {
@@ -38,7 +97,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "metadata": {
@@ -62,7 +120,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
         "os.chdir('drive/MyDrive/Welllogs')"
       ],
       "metadata": {
@@ -81,34 +138,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "!pip install lasio"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0pTD1AoKw1LG",
-        "outputId": "4509fcac-a763-40c4-fff2-8ed0f2d4977d"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting lasio\n",
-            "  Downloading lasio-0.31-py2.py3-none-any.whl (47 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/47.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m47.4/47.4 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from lasio) (1.23.5)\n",
-            "Installing collected packages: lasio\n",
-            "Successfully installed lasio-0.31\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "For the purpose of testing mounting and ingestion, we read one sample file."
@@ -120,7 +149,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import lasio\n",
         "las=lasio.read('1052987184.las')"
       ],
       "metadata": {
@@ -726,7 +754,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
         "df = pd.concat(dfs)"
       ],
       "metadata": {
@@ -1993,9 +2020,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "corr_matrix = df.corr()\n",
         "sns.heatmap(corr_matrix, cmap='coolwarm')\n",
         "plt.show()"
@@ -2168,7 +2192,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.impute import KNNImputer\n",
         "imputer = KNNImputer()\n",
         "df_s[lst] = imputer.fit_transform(df_s[lst])"
       ],
@@ -2322,22 +2345,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now, we want to use scaling on these values. There is standard scaler and minmax scaler, and robust scaler. There are also other types not covered in this workshop. Standard scaler is easy to implement which also applies to minmax. The difference is that standard scaler will turn mean to 0 with 1 unit variance which in some cases we would like to avoid so we use minmax scaler. However, both assume dataset is normally distributed. However, robust scaler avoids that and capable of transforming data that is not normally distributed."
+        "Now, we want to use scaling on these values. There is standard scaler and minmax scaler, and robust scaler. There are also other types not covered in this workshop. Standard scaler is easy to implement which also applies to minmax. The difference is that standard scaler will turn mean to 0 with 1 unit variance which in some cases we would like to avoid so we use minmax scaler. However, both assume dataset is normally distributed. However, robust scaler avoids that and capable of transforming data that is not normally distributed. MaxABs sclaer shift data using absolute value of each feature to [-1,1]."
       ],
       "metadata": {
         "id": "JxS-5KPhHjNT"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.preprocessing import StandardScaler,MinMaxScaler,RobustScaler,MaxAbsScaler"
-      ],
-      "metadata": {
-        "id": "4MAMgjdwHiVU"
-      },
-      "execution_count": 22,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2685,22 +2697,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We train test split data."
+        "We train test split data. Training set means the set we will look at all the time during training while testing set is the sample of data I will never look into. This is to check, does the algorithm work well with data never seen before."
       ],
       "metadata": {
         "id": "QQoIcSADI6Pv"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split"
-      ],
-      "metadata": {
-        "id": "rXTezRADI5To"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2725,7 +2726,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
         "lr = LinearRegression()\n",
         "lr.fit(X_train,y_train)\n",
         "lr.score(X_test,y_test)"
@@ -2763,7 +2763,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.tree import DecisionTreeRegressor\n",
         "dt = DecisionTreeRegressor()\n",
         "dt.fit(X_train,y_train)\n",
         "dt.score(X_test,y_test)"
@@ -2801,7 +2800,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import xgboost as xgb\n",
         "reg = xgb.XGBRegressor()\n",
         "reg.fit(X_train,y_train)\n",
         "reg.score(X_test,y_test)"
@@ -2839,17 +2837,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import RandomizedSearchCV\n"
-      ],
-      "metadata": {
-        "id": "M8n5fLL6LdUH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "params = {'learning_rate' : [0.05,0.10,0.15,0.20,0.25,0.30],\n",
         " 'max_depth' : [ 3, 4, 5, 6, 8, 10, 12, 15],\n",
         " 'min_child_weight' : [ 1, 3, 5, 7 ],\n",
@@ -2862,6 +2849,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I run randomized search with cv=5. This means how many random samplings of train valid split I will do with the compute in a single iteration. Scoring here I used r2 which is a measure of accuracy. I could use MSE, RMSE, MAE on other things."
+      ],
+      "metadata": {
+        "id": "vReiZWL-i_n1"
+      }
     },
     {
       "cell_type": "code",
@@ -3135,18 +3131,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np"
-      ],
-      "metadata": {
-        "id": "Z3eixllFWMxm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "df.columns"
       ],
       "metadata": {
@@ -3356,24 +3340,22 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.decomposition import PCA"
-      ],
-      "metadata": {
-        "id": "ZIwGHRggFGlw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_pca = df.drop(['WELL','GR'],axis=1)\n"
+        "df_pca = df.drop(['WELL','GR'],axis=1)"
       ],
       "metadata": {
         "id": "EBIjvhzjFRyv"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "One thing about PCA is you need to select number of componenets. Explained variance ratio shows how much can be explained from the features. Here it doesn't make sense since number of features is very low. However, if you are working with seismic with many features there, you would need definitly PCA to try to reduce data dimensioin. But, you will lose explaination about what featues went into training and what features effected computation most."
+      ],
+      "metadata": {
+        "id": "Seyuq0LmiZfE"
+      }
     },
     {
       "cell_type": "code",
@@ -3415,19 +3397,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.optim as optim"
-      ],
-      "metadata": {
-        "id": "QEAVS9VY0BSI"
-      },
-      "execution_count": 30,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "X = data.drop('GR',axis=1)\n",
         "y = data['GR']"
       ],
@@ -3436,6 +3405,15 @@
       },
       "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pytorch or tensorflow work by ingesting data as a Tensor. A tensor is a unit in GPU that optimizes computation as deep learning is most relevant to usage of GPU in order to perform matrix multiplication efficiently."
+      ],
+      "metadata": {
+        "id": "_padx2F1gHOm"
+      }
     },
     {
       "cell_type": "code",
@@ -3476,20 +3454,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Below is code base for simple Artificial Neural Network. Notice we have 1 input layer and one hidden layer. The more layers you have the more complex the network becomes. However, it is not necessary means you will arrive at good solution. Sometimes, deep networks are guilty of overfitting meaning they know how to solve training set but unable to solve for test set. Notice we used Relu which is an algorithm that will normalize output."
+      ],
+      "metadata": {
+        "id": "PTQUESVBgnE3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class ANNRegressor(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.hidden1 = nn.Linear(12, 24)\n",
+        "        self.input = nn.Linear(12, 24) # notice I used number of features as input shape\n",
         "        self.act1 = nn.ReLU()\n",
-        "        self.hidden2 = nn.Linear(24, 8)\n",
+        "        self.hidden = nn.Linear(24, 8)\n",
         "        self.act2 = nn.ReLU()\n",
         "        self.output = nn.Linear(8, 1)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        x = self.act1(self.hidden1(x))\n",
-        "        x = self.act2(self.hidden2(x))\n",
+        "        x = self.act1(self.input(x))\n",
+        "        x = self.act2(self.hidden(x))\n",
         "        x = self.output(x)\n",
         "        return x\n",
         "\n",
@@ -3521,12 +3508,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Long Short term memory cell is an advancment in deep learning. The idea is that this cell will memorize previous steps and use them in calculation. Unlike previous one where we explicitly used Relu, here the cell will use tanh to normalize output."
+      ],
+      "metadata": {
+        "id": "5Vg8WO10hI1f"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class LSTMRegressor(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.hidden1 = nn.Linear(12, 24)\n",
+        "        self.hidden1 = nn.Linear(12, 24) # same here using number of features as input\n",
         "        self.act1 = nn.ReLU()\n",
         "        self.hidden2 = nn.Linear(24, 8)\n",
         "        self.lstm = nn.LSTM(input_size=8, hidden_size=50, num_layers=1, batch_first=True)\n",
@@ -3570,6 +3566,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Loss function is an important concept in deep learning. Means how to measure loss (gradient descent value). For regression, it is common to use Mean square error. While for classification, it is common to use cross entropy."
+      ],
+      "metadata": {
+        "id": "the0_jITgjPw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Another somewhat important concept is optimizer. It is necessary to use optimizer to know how to behave in gradient descent. It is common to use Adam, RMSprop, and other fuctions that utilize learning rate. The smaller the learning rate the slower the function becomes. However, it is more guranteed to reach optimal result."
+      ],
+      "metadata": {
+        "id": "mkqur7N-hvCd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "loss_fn = nn.MSELoss()  # mean squared error for regression\n",
@@ -3580,6 +3594,15 @@
       },
       "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we have epochs which is a term for how many times we iterate and try to solve again. Batch size is how many data points will go into tensor. The larger the more inefficient computation becomes."
+      ],
+      "metadata": {
+        "id": "9lmYl9vDiGin"
+      }
     },
     {
       "cell_type": "code",
